Upgrade documentation generation.